[package]
name = "eye"
description = "Cross platform camera capture and control"
version = "0.2.0"
authors = ["Christopher N. Hesse <raymanfx@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository= "https://github.com/raymanfx/eye-rs"

[features]
default = ["jpeg", "v4l"]
jpeg = ["jpeg-decoder"]

[dependencies]
bitflags = "^1.2"
ffimage = "^0.8"

jpeg-decoder = { version = "^0.1", optional = true }

[target.'cfg(target_os = "linux")'.dependencies.v4l]
version = "^0.10"
optional = true
