[package]
name = "eye"
description = "Cross platform camera capture and control"
version = "0.3.1"
authors = ["Christopher N. Hesse <raymanfx@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository= "https://github.com/raymanfx/eye-rs"

[features]
default = ["jpeg"]
jpeg = ["jpeg-decoder"]

# capture backends
hal-uvc = ["uvc"]

[dependencies]
bitflags = "^1.2"
ffimage = "0.9.0"

jpeg-decoder = { version = "^0.1", optional = true }
uvc = { version = "0.2", features = ["vendor"], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
v4l = { version = "0.12" }

[dev-dependencies]
itertools = "0.10.0"
