[package]
name = "eye-hal"
description = "Camera hardware abstraction layer (HAL)"
version = "0.2.0"
authors = ["Christopher N. Hesse <raymanfx@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository= "https://github.com/raymanfx/eye-rs"

[dependencies]
bitflags = "2.5.0"

[target.'cfg(target_os = "linux")'.dependencies]
v4l = "0.14.0"

[target.'cfg(target_os="windows")'.dependencies]
uvc = "0.2.0"

[target.'cfg(target_os="macos")'.dependencies]
openpnp_capture = { version = "0.2.4" }
openpnp_capture_sys = { version = "0.4.0" }

[dev-dependencies]
itertools = "0.11.0"
image = "0.25.1"
