[package]
name = "eye"
description = "Cross platform camera capture and control"
version = "0.4.1"
authors = ["Christopher N. Hesse <raymanfx@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository= "https://github.com/raymanfx/eye-rs"

[features]
default = ["jpeg"]
jpeg = ["jpeg-decoder"]

# capture backends
hal-uvc = ["eye-hal/plat-uvc"]

[dependencies]
eye-hal = { version = "0.1.0", path = "../eye-hal" }
ffimage = "0.9.0"
ffimage_yuv = "0.9.0"

jpeg-decoder = { version = "0.2.1", optional = true }
