[package]
name = "eye"
description = "Cross platform camera capture and control"
version = "0.5.0"
authors = ["Christopher N. Hesse <raymanfx@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository= "https://github.com/raymanfx/eye-rs"

[features]
default = ["jpeg"]
jpeg = ["jpeg-decoder"]

[dependencies]
eye-hal = { version = "0.2.0", path = "../eye-hal" }
ffimage = "0.10.0"
ffimage_yuv = "0.10.0"

jpeg-decoder = { version = "0.2.1", optional = true }

[dev-dependencies]
glium = "0.31.0"
